// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Redux-form Field PartialDateField snapshots tests renders PartialDateField component 1`] = `
<WithStyles(PartialDateForm)
  allowPartial={true}
  classes={
    Object {
      "fakeTitle": Object {},
    }
  }
  input={
    Object {
      "onChange": [Function],
    }
  }
  name="partialDate"
  onChange={[Function]}
/>
`;

exports[`Redux-form Field PartialDateField snapshots tests renders PartialDateField component with requiredField class on all fields 1`] = `
<WithStyles(PartialDateForm)
  allowPartial={false}
  className="requiredField"
  classes={
    Object {
      "fakeTitle": Object {},
    }
  }
  input={
    Object {
      "onChange": [Function],
    }
  }
  name="partialDate"
  onChange={[Function]}
/>
`;

exports[`Redux-form Field PartialDateField snapshots tests renders PartialDateField component with requiredField class on year field 1`] = `
<WithStyles(PartialDateForm)
  allowPartial={true}
  className="requiredField"
  classes={
    Object {
      "fakeTitle": Object {},
    }
  }
  input={
    Object {
      "onChange": [Function],
    }
  }
  name="partialDate"
  onChange={[Function]}
/>
`;
